# llm

./: .activate  .created.yml  .gitignore  .pylintrc  .updated.yml  CHANGELOG.md  README.md  dev-requirements.txt  llm.code-workspace  pyproject.toml  requirements.txt  todo.txt
src/llm/: __init__.py  main.py
src/llm/.gim/: meta.yml
src/llm/extension/: base_transformer.py  bert_transformer.py  code_gemma_transformer.py  salesforce_transformer.py  t5_transformer.py
src/llm/extension/errors/: base_error.py
src/local_conjurer/: __init__.py  __main__.py
src/local_conjurer/.gim/: meta.yml
src/local_conjurer/extension/: base_transformer.py  bert_transformer.py  code_gemma_transformer.py  salesforce_transformer.py  t5_transformer.py
tests/extension/: shared_test_methods.py  test_base_transformer.py  test_bert_transformer.py  test_code_gemma_transformer.py  test_salesforce_transformer.py  test_t5_transformer.py
