[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
name = "local-conjurer"
authors = [{ name = "Joni Töyrylä", email = "info@jonitoyryla.eu" }]
version = "0.3.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["transformers>=4.52.4", "torch>=2.7.1", "sentencepiece>=0.2"]
keywords = ["ai", "llm", "transformers", "code-generation", "text-generation"]
urls = { "Source" = "https://github.com/Nerdman4U/llm" }
license = "MIT"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# Set true if want to include package data
# include-package-data = true
include-package-data = false

[tool.setuptools.package-data]
# Data folders included in the package
# Example: llm = ["data/**/*", ".gim/**/*"]
llm = []

[project.scripts]
# Script to run the application
# Example: llm = "llm.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.2"
version_files = ["pyproject.toml:^version"]
tag_format = "$version"
update_changelog_on_bump = true
style = [
    [
        "qmark",
        "fg:#ff9d00 bold",
    ],
    [
        "question",
        "bold",
    ],
    [
        "answer",
        "fg:#ff9d00 bold",
    ],
    [
        "pointer",
        "fg:#ff9d00 bold",
    ],
    [
        "highlighted",
        "fg:#ff9d00 bold",
    ],
    [
        "selected",
        "fg:#cc5454",
    ],
    [
        "separator",
        "fg:#cc5454",
    ],
    [
        "instruction",
        "",
    ],
    [
        "text",
        "",
    ],
    [
        "disabled",
        "fg:#858585 italic",
    ],
]
